click tags to create tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>jQuery Tags-input Basic Example</title>
 <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-<link href="tags.css" rel="stylesheet">
+<link href="tags_testx.css" rel="stylesheet">
 <style>
     .container { margin: 250px auto; }
         /*
@@ -102,9 +102,7 @@
 
         </script>
 
-        <div class='autocomplete-items-test'>
-            
-        </div>
+        <div class='autocomplete-items-test'></div>
 
 </body>
 </html>
